se agregó soprte para diversos medios

--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,33 @@
     Prof. Ricardo Fabio
 */
 
-body {
-    background-color: #ff0000;
+/* Smartphone portrait */
+@media (min-width: 576px) {
+    body {
+        background-color: #00ffff;
+    }
+}
+/* Smartphone landscape */
+@media (min-width: 576px) {
+    body {
+        background-color: #00ffff;
+    }
+}
+/* Tablet portrait */
+@media (min-width: 768px) {
+    body {
+        background-color: #ffff00;
+    }
+}
+/* Tablet landscape */
+@media (min-width: 992px) {
+    body {
+        background-color: #ff6600;
+    }
+}
+/* PC */
+@media (min-width: 1200px) {
+    body {
+        background-color: #ff0000;
+    }
 }
