--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,17 @@ body {
     justify-content: space-between;
 }
 
+.boton {
+    text-decoration: none;
+    color: #fff;
+    font-size:1.3m;
+    font-weight: 700;
+    background-color: #c00000;
+    padding: 10px 40 px;
+    border: 2px solid #fff;
+    border-radius: 25px;
+}
+
 /* icono tope */
 #tope {
     position: fixed;
@@ -80,6 +91,27 @@ nav ul li a {
     color:white;
 }
 
+/* destaque */
+main {
+    height: 75vh;
+    background: url(img/banner.jpg);
+    background-size: cover;
+    color:#fff;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+}
+
+main h1 {
+    font-size: 2.5em;
+}
+
+main h2 {
+    font-size:1em;
+    margin: 20px 0px 50px 0px;
+}
+
+
 @media (min-width: 576px) {
     
     /* Layout */
@@ -94,6 +126,11 @@ nav ul li a {
     .contenedor {
         max-width: 720px;
     }
+
+    /*destaque*/
+    main h1, main h2 {
+        text-shadow: #000 0.05em 0.05em 0.05em;
+    }
 }
 /* Tablet portrait */
 @media (min-width: 768px) {
@@ -102,6 +139,19 @@ nav ul li a {
     .contenedor {
         max-width: 960px;
     }
+    /*destaque*/
+    main {
+        height: 45vh;
+    }
+
+    main h1{
+        font-size: 5.5em;
+    }
+    
+    main h2 {
+        font-size: 2em;
+    }
+    
 }
 /* Tablet landscape */
 @media (min-width: 992px) {
@@ -109,6 +159,11 @@ nav ul li a {
     /* Layout */
     .contenedor {
         max-width: 1140px;
+    }
+
+    /*destaque*/
+    main{
+        height: 70vh;
     }
 }
 /* PC */
@@ -147,4 +202,8 @@ nav ul li a {
     nav ul li a:hover {
         color: #c00000;
     }
+        /*destaque*/
+        main{
+            height: 70vh;
+        }
 }
