Corrección del bug del menú

--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,10 @@ header {
 
 label {
     font-size: 3em;
-    padding-right: 15px;
+    position: fixed;
+    top: 5px;
+    right: 15px;
+    color: rgba(0,0,0,0.5);
 }
 
 nav ul {
@@ -249,7 +252,7 @@ main a {
     #sobre {
         background-attachment: fixed;
     }
-    
+
     /*destaquesobre*/
     #destaquesobre {
         display: inline;
